# village_sim_mvp

./: .gitignore  AGENTS.md  DESIGN_1.md  DESIGN_1_PLAN.md  README.md  environment.yml  pyproject.toml
runs/: seed_1.json
src/village_sim/: __init__.py  __main__.py  bench.py  msgpack_codec.py  run.py
src/village_sim/agent/: actions.py  decision.py  handoff.py  memory.py  needs.py  perception.py  policy.py  social.py  state.py
src/village_sim/core/: config.py  time.py  types.py
src/village_sim/goap/: __init__.py  executor.py  knowledge.py  planner.py
src/village_sim/orchestrator/: __init__.py  action_model.py  evaluator.py  induction.py  orchestrator.py  snapshotting.py  symbolic.py  trajectory.py  travel.py
src/village_sim/sim/: economy.py  engine.py  event_summary.py  events.py  metrics.py  profile.py  region.py  replay.py  snapshot.py
src/village_sim/view/: ascii_view.py  scroll.py  stc_map.py  wx_view.py
src/village_sim/world/: discoverables.py  grid.py  hydrology.py  resources.py  terrain.py  water_system.py  weather.py  world.py
src/village_sim_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_bench.py  test_cli_help.py  test_cold_shelter.py  test_cold_weather_polish.py  test_discoverables.py  test_economy.py  test_founder_vectorized_env.py  test_goap_end_to_end.py  test_goap_executor_queue.py  test_goap_planner.py  test_handoff.py  test_initial_agents.py  test_knowledge.py  test_learning_visibility.py  test_map_rendering.py  test_memory.py  test_multi_agent_survival.py  test_multi_agent_ui_reporting.py  test_mvp_loop.py  test_orchestrator.py  test_runtime_discoverables.py  test_simulation.py  test_social.py  test_state_arrays.py  test_stc_map.py  test_water_system.py  test_weather_cold_awareness.py  test_world.py
tests/fixtures/: bench_representative_outputs.json
typings/numba/: __init__.pyi
typings/wx/: __init__.pyi  stc.pyi
