[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "village-sim-mvp"
version = "0.1.0"
description = "A headless-first medieval survival simulation MVP with MessagePack persistence."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Earnest Williams" }]
license = { text = "MIT" }
dependencies = ["msgpack>=1.0"]

[project.optional-dependencies]
gui = ["wxPython>=4.2"]

[project.scripts]
village-sim = "village_sim.run:main"
village-sim-gui = "village_sim.view.wx_view:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["src", "tests"]

[[tool.mypy.overrides]]
module = "msgpack"
ignore_missing_imports = true
